--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "axios": "^0.20.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "qs": "^6.9.4"
+    "mysql2": "^2.2.5",
+    "qs": "^6.9.4",
+    "sequelize": "^6.3.5"
   },
   "engines": {
     "npm": "6.5.0",
